XMLtoCSV/objects/unpackaged/objects/Account_Authorization_vod__c.object
<CustomObject>
    <description>Contains Account related attributes that pertain to licensing and sampling controls.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Account with midlevel practitioner credentials for which a supervising physician must be defined.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Authorizations</relationshipLabel>
        <relationshipName>Account_Authorizations_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collaborative_Relation_End_Date_vod__c</fullName>
        <description>The end or expiration date of the collaborative agreement between thte midlevel practitioner and the supervising phyisician. If populated, this field will further restrict the supervising physicians available for selection on the call report.</description>
        <label>Collaborative Relationship End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collaborative_Relation_Start_Date_vod__c</fullName>
        <description>The start or effective date of the collaborative agreement between the midlevel practitioner and the supervising phyisician. If populated, this field will further restrict the supervising physicians available for selection on the call report.</description>
        <label>Collaborative Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collaborative_Relationship_Inactive_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not a collaborative agreement between a midlevel practitioner and a supervising physician is active or inactive. Inactive relationships will not be available for selection on the call report.</description>
        <label>Collaborative Relationship Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collaborative_Relationship_State_vod__c</fullName>
        <description>The state in which the collaborative agreement between the midlevel practitioner and the supervising physician exists. Used to filter the list of available Supervising Physicians when Accounts practice in multiple states.</description>
        <label>Collaborative Relationship State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>Unique record ID used for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Unique record ID for records created offline.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Supervising_Account_Name_vod__c</fullName>
        <description>The Account Name of the Supervising Account. Used to display the Supervising Account on Call if outside of a User&apos;s territory.</description>
        <label>Supervising Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervising_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Account with physician credentials that has a collaborative agreement in place with the defined midlevel practitioner.</description>
        <label>Supervising Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Authorizations (Supervising Account)</relationshipLabel>
        <relationshipName>Account_Authorizations_Supervising_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Authorization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Account Authorization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Authorizations</pluralLabel>
    <recordTypes>
        <fullName>CollaborativeRelationship_vod</fullName>
        <active>true</active>
        <description>Defines a relationship between a midlevel practitioner and a supervising phyisician.</description>
        <label>CollaborativeRelationship_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Is_Person_vod</fullName>
        <active>true</active>
        <description>Ensures that the Account selected is a Person Account and not a Business Account.</description>
        <errorConditionFormula>NOT(Account_vod__r.IsPersonAccount)</errorConditionFormula>
        <errorDisplayField>Account_vod__c</errorDisplayField>
        <errorMessage>The Account must be a Person Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Collaborative_Relation_Required_Flds_vod</fullName>
        <active>true</active>
        <description>Ensures that a midlevel practitioner, a supervising physician, and a state are selected when defining Collaborative Relationship records.</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;CollaborativeRelationship_vod&apos;, OR( ISBLANK(Account_vod__c), ISBLANK(Supervising_Account_vod__c),  ISPICKVAL(Collaborative_Relationship_State_vod__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Account, Supervising Account, and State are required when creating a Collaborative Relationship record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Collaborative_Relation_Start_End_Dt_vod</fullName>
        <active>true</active>
        <description>Ensures that when using start and end dates to define a Collaborative Relationship, the End Date of a Collaborative Relationship record is greater than its Start Date.</description>
        <errorConditionFormula>(ISBLANK(Collaborative_Relation_Start_Date_vod__c) &amp;&amp; NOT(ISBLANK(Collaborative_Relation_End_Date_vod__c))) ||
(NOT(ISBLANK(Collaborative_Relation_Start_Date_vod__c)) &amp;&amp; ISBLANK(Collaborative_Relation_End_Date_vod__c)) ||
(NOT(ISBLANK(Collaborative_Relation_Start_Date_vod__c)) &amp;&amp; NOT(ISBLANK(Collaborative_Relation_End_Date_vod__c)) &amp;&amp; (Collaborative_Relation_Start_Date_vod__c &gt;= Collaborative_Relation_End_Date_vod__c))</errorConditionFormula>
        <errorMessage>When using dates for a Collaborative Relationship record, both the Start and End Date are required, and the End Date must be greater than the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Supervising_Account_Is_Person_vod</fullName>
        <active>true</active>
        <description>Ensures that the Supervising Account selected in a Person Account and not a Business Account.</description>
        <errorConditionFormula>NOT(Supervising_Account_vod__r.IsPersonAccount)</errorConditionFormula>
        <errorDisplayField>Supervising_Account_vod__c</errorDisplayField>
        <errorMessage>The Supervising Account must be a Person Account.</errorMessage>
    </validationRules>
</CustomObject>